# ising

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INIT.md  SELF_ANALYSIS.md  TECH_DESIGN_NEW.md  ising.toml  package.json  plan.md  plan.refactor.md  pnpm-lock.yaml  pnpm-workspace.yaml  publish.config.ts  skills-lock.json
.agents/skills/leanspec-sdd/: SKILL.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  publish.yml
docs/: lean-spec-analysis.md
ising-analysis/: Cargo.toml
ising-analysis/src/: hotspots.rs  lib.rs  signals.rs
ising-builders/: Cargo.toml
ising-builders/src/: change.rs  common.rs  lib.rs  structural.rs
ising-builders/src/languages/: go.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs  vue.rs
ising-builders/tests/: integration_test.rs
ising-cli/: Cargo.toml
ising-cli/src/: main.rs
ising-core/: Cargo.toml
ising-core/src/: config.rs  error.rs  graph.rs  ignore.rs  lib.rs  metrics.rs
ising-core/src/graph/: mod.rs
ising-core/src/physics/: mod.rs
ising-db/: Cargo.toml
ising-db/src/: export.rs  lib.rs  queries.rs  schema.rs
ising-scip/: Cargo.toml
ising-scip/src/: lib.rs
ising-server/: Cargo.toml
ising-server/src/: lib.rs
ising-viz/: index.html  package.json  tailwind.config.ts
ising-viz/public/: sample-data.json
ising-viz/src/: App.tsx  types.ts
ising-viz/src/components/: Header.tsx  MetricBar.tsx  SearchBar.tsx  SeverityBadge.tsx  Tooltip.tsx
ising-viz/src/data/: derived.ts  loader.ts
ising-viz/src/state/: context.tsx
ising-viz/src/styles/: globals.css
ising-viz/src/utils/: colors.ts  format.ts  graph.ts
ising-viz/src/views/: BlastRadius.tsx  FileDetail.tsx  Sidebar.tsx  SignalFeed.tsx  Treemap.tsx
scripts/: add-platform-deps.ts  bump-dev-version.ts  copy-platform-binaries.sh  generate-platform-manifests.ts  prepare-publish.ts  publish-main-packages.ts  publish-platform-packages.ts  restore-packages.ts  sync-versions.ts  validate-no-workspace-protocol.ts  validate-platform-binaries.ts
specs/: evaluate-specs-58-60.md
specs/001-rust-core/: README.md
specs/002-scip-loader/: README.md
specs/003-container-workers/: README.md
specs/004-rust-monorepo/: README.md
specs/005-lsp-vs-scip-research/: README.md
specs/006-cli-mvp/: README.md
specs/007-e2e-scip-indexing/: README.md
specs/008-actionable-diagnostics/: README.md
specs/009-spectral-health-thesis/: README.md
specs/010-multi-granularity-graph/: README.md
specs/011-fastapi-validation-findings/: README.md
specs/012-intra-file-coupling/: README.md
specs/013-viz-data-export/: README.md
specs/014-viz-infrastructure/: README.md
specs/015-viz-treemap/: README.md
specs/016-viz-blast-radius/: README.md
specs/017-viz-sidebar/: README.md
specs/018-viz-agent-formats/: README.md
specs/019-rust-language-support/: README.md
specs/020-frontend-framework-support/: README.md
specs/021-self-analysis/: README.md  SELF_ANALYSIS.md
specs/022-refactor-builder-decomposition/: README.md
specs/023-signal-false-positive-fixes/: README.md
specs/024-go-language-support/: README.md
specs/024-lean-spec-analysis/: README.md
specs/025-java-language-support/: README.md
specs/026-csharp-language-support/: README.md
specs/027-php-language-support/: README.md
specs/028-ruby-language-support/: README.md
specs/029-kotlin-language-support/: README.md
specs/030-swift-language-support/: README.md
specs/031-cpp-language-support/: README.md
specs/032-real-world-validation/: README.md
specs/033-self-analysis-round2-signal-improvements/: README.md
specs/034-structural-force-analysis/: README.md  RESEARCH.md
