[workspace]
members = ["ising-core", "ising-scip", "ising-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
petgraph = "0.7"
ndarray = "0.16"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
scip = "0.6"
protobuf = "3"
clap = { version = "4.5", features = ["derive"] }
