[workspace]
members = ["ising-core", "ising-scip", "ising-cli", "ising-db", "ising-builders", "ising-analysis", "ising-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
petgraph = "0.7"
ndarray = "0.16"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
scip = "0.6"
protobuf = "3"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
gix = { version = "0.68", default-features = false, features = ["basic", "parallel"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
walkdir = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
