[package]
name = "ising-builders"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph builders for structural (Tree-sitter) and change (git) layers"

[dependencies]
ising-core = { path = "../ising-core" }
tree-sitter.workspace = true
gix.workspace = true
rayon.workspace = true
walkdir.workspace = true
regex.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
