[package]
name = "ising-builders"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph builders for structural (Tree-sitter) and change (git) layers"

[dependencies]
ising-core = { path = "../ising-core" }
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-rust.workspace = true
gix.workspace = true
rayon.workspace = true
walkdir.workspace = true
regex.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
ising-db = { path = "../ising-db" }
