[package]
name = "ising-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for local Ising maintainability analysis"

[[bin]]
name = "ising"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ising-core = { path = "../ising-core" }
ising-scip = { path = "../ising-scip" }
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
protobuf.workspace = true
scip.workspace = true
tempfile = "3"
