[package]
name = "ising-core"
version = "0.1.0"
edition = "2024"
description = "Phase-transition analysis for software architectures using the Ising model"
license = "MIT"

[dependencies]
petgraph = "0.7"
ndarray = "0.16"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
