[package]
name = "ising-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase-transition analysis for software architectures using the Ising model"

[dependencies]
petgraph.workspace = true
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
