[package]
name = "ising-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core graph types and analysis for the Ising code graph engine"

[dependencies]
petgraph.workspace = true
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
chrono.workspace = true
regex.workspace = true
