[package]
name = "ising-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite storage for Ising code graph analysis"

[dependencies]
ising-core = { path = "../ising-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
