[package]
name = "ising-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for the Ising code graph analysis engine"

[dependencies]
ising-db = { path = "../ising-db" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
